[tool.poetry]
name = "mp4-edit"
version = "0.1.0"
description = ""
authors = ["Dakota Madden-Fong <maddenfong@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
moviepy = "^1.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
